[FIX] center align

--- a/assets/styles/less/common.less
+++ b/assets/styles/less/common.less
@@ -82,6 +82,10 @@ div.login-container {
         z-index: 10;
         width: 100%;
         height: 100%;
+
+        .valign {
+            margin: 0 auto;
+        }
     }
 
     .checkbox-item a {
